Table users {
  id int [pk, increment]
  name varchar(50) [not null]
  surname varchar(50) [not null]
  email varchar(100) [not null, unique]
  password varchar(255) [not null]
  phone varchar(20) [not null]
  role varchar(20) [not null]
  active boolean [not null, default: true]
  created_at datetime [not null]
}

Table service_categories {
  id int [pk, increment]
  name varchar(100) [not null]
  description text
}

Table services {
  id int [pk, increment]
  category_id int [not null]
  name varchar(100) [not null]
  description text
  duration int [not null]
  price decimal(10,2) [not null]
  active boolean [not null, default: true]
}

Ref: services.category_id > service_categories.id


Table employees {
  id int [pk, increment]
  user_id int [not null, unique]
  description text
  active boolean [not null, default: true]
}

Ref: employees.user_id - users.id


Table employee_services {
  employee_id int [not null]
  service_id int [not null]

  indexes {
    (employee_id, service_id) [pk]
  }
}

Ref: employee_services.employee_id > employees.id
Ref: employee_services.service_id > services.id


Table employee_availability {
  id int [pk, increment]
  employee_id int [not null]
  day_of_week int [not null]
  start_time time [not null]
  end_time time [not null]
}

Ref: employee_availability.employee_id > employees.id


Table reservations {
  id int [pk, increment]
  user_id int [not null]
  employee_id int [not null]
  service_id int [not null]
  reservation_date date [not null]
  start_time time [not null]
  end_time time [not null]
  status varchar(20) [not null]
  comment text
  created_at datetime [not null]
}

Ref: reservations.user_id > users.id
Ref: reservations.employee_id > employees.id
Ref: reservations.service_id > services.id